--- a/SASD2025/HW/144HW2.md
+++ b/SASD2025/HW/144HW2.md
@@ -1,1 +1,63 @@
+# HW2: Code Smell - Lazy Class (144)
+
+- ชื่อ: ประภากร คล้อยโท้  
+- รหัสนิสิต: 66102010144  
+- หัวข้อ: Lazy Class
+
+---
+
+## a) ความหมายของ Lazy Class (อธิบายภาษามนุษย์)
+
+**Lazy Class** คือ “คลาสที่มีอยู่ก็เหมือนไม่มี”  
+เพราะมันมีงานน้อยมาก เช่น มีแค่ field 1-2 ตัว + getter/setter หรือมีเมธอดนิดเดียว  
+แทบไม่ช่วยลดความซับซ้อนของระบบ กลับทำให้โค้ดกระจัดกระจายและต้องตามไปหลายไฟล์โดยไม่จำเป็น
+
+พูดง่าย ๆ คือ  
+ถ้าลบคลาสนี้ทิ้ง แล้วเอาหน้าที่ของมันไปรวมกับคลาสหลัก  
+โค้ดจะอ่านง่ายและดูแลต่อได้ง่ายกว่า
+
+---
+
+## b) ตัวอย่างโค้ดที่เกิด Lazy Class
+
+ตัวอย่างนี้มี `CustomerNote` ที่ทำหน้าที่แค่เก็บข้อความอย่างเดียว  
+ไม่มีพฤติกรรมอะไรสำคัญ ทำให้ต้องสร้างคลาสเพิ่มโดยไม่จำเป็น
+
+```csharp
+public class Customer
+{
+    public string Name { get; set; }
+    public CustomerNote Note { get; set; } = new CustomerNote();
+}
+
+public class CustomerNote
+{
+    public string Text { get; set; } = "";
+}
+```
+
+---
+
+## c) ตัวอย่างโค้ดที่ refactoring แล้ว
+
+สามารถแก้ Lazy Class ได้โดยการยุบ `CustomerNote`  
+แล้วนำข้อมูลไปไว้ในคลาส `Customer` โดยตรง
+
+```csharp
+public class Customer
+{
+    public string Name { get; set; }
+    public string NoteText { get; set; } = "";
+}
+```
+
+---
+
+## d) กรณีที่ Lazy Class ไม่จำเป็นต้อง refactor
+
+บางครั้ง Lazy Class อาจยังไม่จำเป็นต้องแก้  
+เช่น ถ้าคลาสนั้นถูกเตรียมไว้เพื่อรองรับการเพิ่มฟังก์ชันในอนาคต  
+หรืออาจมีข้อมูลและพฤติกรรมเพิ่มเข้ามาภายหลัง
+
+ในกรณีนี้ การแยกคลาสไว้ก่อนก็ยังถือว่าสมเหตุสมผล
 
